# scriptsymas

./: .gitignore  README.md  printASCII.c  rmspace.py  test.sh  wr.c
embedded-skeleton/: README.md  arduino_rust_setup.sh  flash.sh  rust_setup.sh
embedded-skeleton/config/: Cargo.toml
embedded-skeleton/hidden_cargo/: config.toml
md2pdf/: README.md  md2pdf.py
openremote/: README.md  openremote.sh
openremote/python_openremote/: openremote.py
openremote/rust_openremote/: Cargo.toml  README.md
openremote/rust_openremote/src/: helpers.rs  main.rs  shell.rs
testing/: file1.md
trash/: main.c
trash/C/: main.c  out
trash/rust/: Cargo.toml  foo.txt
trash/rust/src/: main.rs
