[package]
name = "arduino-blink"
version = "0.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "4f8ab2594d4497bdfbd57b641c05c407f3b309f5"
features = ["arduino-nano"]
